mkdocs-material-1.5.2 (2017-04-05)

  * Added requirements as explicit dependencies in setup.py
  * Fixed non-synchronized transitions in search form

mkdocs-material-1.5.1 (2017-03-30)

  * Fixed rendering and offset of targetted footnotes
  * Fixed #238: Link on logo is not set to site_url

mkdocs-material-1.5.0 (2017-03-24)

  * Added support for localization of search placeholder
  * Added keyboard events for quick access of search
  * Added keyboard events for search control
  * Added opacity on hover for search buttons
  * Added git hook to skip CI build on non-src changes
  * Fixed non-resetting search placeholder when input is cleared
  * Fixed error for unescaped parentheses in search term
  * Fixed #229: Button to clear search missing
  * Fixed #231: Escape key doesn't exit search
  * Removed old-style figures from font feature settings

mkdocs-material-1.4.1 (2017-03-16)

  * Fixed invalid destructuring attempt on NodeList (in Safari, Edge, IE)

mkdocs-material-1.4.0 (2017-03-16)

  * Added support for grouping searched sections by documents
  * Added support for highlighting of search terms
  * Added support for localization of search results
  * Fixed #216: table of contents icon doesn't show if h1 is not present
  * Reworked style and layout of search results for better usability

mkdocs-material-1.3.0 (2017-03-11)

  * Added support for page-specific title and description using metadata
  * Added support for linking source files to documentation
  * Fixed jitter and offset of sidebar when zooming browser
  * Fixed incorrectly initialized tablet sidebar height
  * Fixed regression for #1: GitHub stars break if the repo_url ends with a '/'
  * Fixed undesired white line below copyright footer due to base font scaling
  * Fixed issue with whitespace in path for scripts
  * Fixed #205: support non-fixed (static) header
  * Refactored footnote references for better visibility
  * Reduced repaints to a minimum for non-tabs configuration